# march-18-dsrp-workshop

./: .env.example  .gitignore  README.md  champion_info.json  pyproject.toml
.claude/skills/: train.md  validate.md
.claude/skills/train/: SKILL.md
.claude/skills/validate/: SKILL.md
.github/workflows/: train_and_report.yml  validate_and_promote.yml
notebooks/: 01_analisis_exploratorio.ipynb  02_entrenamiento_uber.ipynb
scenarios/: 01_champion_baseline.sh  02_better_challenger.sh  03_worse_challenger.sh  README.md
scripts/: promote_challenger.py  train_pipeline.py  validate_challenger.py
src/: champion_challenger.py  config.py  data.py  evaluate.py  train.py
